[gd_scene load_steps=14 format=3 uid="uid://uydsemgh8cwt"]

[ext_resource type="Script" path="res://Scripts/dialogo_happy.gd" id="1_g21ok"]
[ext_resource type="Texture2D" uid="uid://b17s1epbvm3d3" path="res://Assets/sombra_happy.png" id="2_ec852"]
[ext_resource type="Texture2D" uid="uid://ebtwqqafk5ij" path="res://Assets/caixa de texto happy.png" id="3_oq0r4"]
[ext_resource type="Texture2D" uid="uid://cip280w7d0nt6" path="res://Assets/Happy.png" id="4_nfbva"]
[ext_resource type="Texture2D" uid="uid://dtkwpby6221qv" path="res://Assets/VoltarICon.png" id="5_evdrn"]
[ext_resource type="FontFile" uid="uid://e8l55ki4br1r" path="res://Assets/fonts/architect-s-daughter/ArchitectsDaughter.ttf" id="6_cx4n7"]
[ext_resource type="FontFile" uid="uid://bbmsch2oktnm0" path="res://Assets/fonts/montreal/Montreal-Regular.ttf" id="7_l6by4"]
[ext_resource type="PackedScene" uid="uid://bnpgrilieevim" path="res://Cenas/background.tscn" id="8_t4k40"]

[sub_resource type="LabelSettings" id="LabelSettings_wxkdt"]
font_size = 30

[sub_resource type="Animation" id="Animation_pr1gu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Happy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(216, 304)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SombraHappy:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.345625, 0.205469)]
}

[sub_resource type="Animation" id="Animation_vyr43"]
resource_name = "new_animation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Happy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(0.406126, 1, 1),
"update": 0,
"values": [Vector2(216, 304), Vector2(216, 280), Vector2(216, 304)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SombraHappy:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(0.406126, 1, 1),
"update": 0,
"values": [Vector2(0.345625, 0.205469), Vector2(0.3, 0.177), Vector2(0.345625, 0.205469)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dpnau"]
_data = {
"RESET": SubResource("Animation_pr1gu"),
"new_animation": SubResource("Animation_vyr43")
}

[sub_resource type="LabelSettings" id="LabelSettings_c7vj4"]
font_size = 27
font_color = Color(0.301244, 0.158623, 0.0933722, 1)

[node name="DialogoHappy" type="CanvasLayer"]
script = ExtResource("1_g21ok")

[node name="Background" parent="." instance=ExtResource("8_t4k40")]

[node name="SombraHappy" type="Sprite2D" parent="."]
position = Vector2(238, 531)
rotation = -0.0872665
scale = Vector2(0.345625, 0.205469)
texture = ExtResource("2_ec852")

[node name="CaixaDeTextoHappy" type="Sprite2D" parent="."]
position = Vector2(648, 358)
scale = Vector2(1, 1.4)
texture = ExtResource("3_oq0r4")

[node name="Happy" type="Sprite2D" parent="."]
position = Vector2(216, 304)
scale = Vector2(0.571556, 0.571556)
texture = ExtResource("4_nfbva")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 992.0
offset_top = 296.0
offset_right = 1096.0
offset_bottom = 416.0
size_flags_stretch_ratio = 0.0
color = Color(0, 0, 0, 0.411765)

[node name="VoltarICon" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1048, 336)
rotation = 3.14159
scale = Vector2(4, 4)
texture = ExtResource("5_evdrn")

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 1000.0
offset_top = 360.0
offset_right = 1086.0
offset_bottom = 413.0
theme_override_fonts/font = ExtResource("6_cx4n7")
text = "Shift"
label_settings = SubResource("LabelSettings_wxkdt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dpnau")
}
autoplay = "new_animation"

[node name="Label2" type="Label" parent="."]
offset_left = 491.0
offset_top = 319.0
offset_right = 798.0
offset_bottom = 396.0
theme_override_fonts/font = ExtResource("7_l6by4")
text = "Olá, eu sou o Happy! 
Já ouviu falar de mim?"
label_settings = SubResource("LabelSettings_c7vj4")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
visible = false
offset_left = 402.0
offset_top = 306.0
offset_right = 878.0
offset_bottom = 383.0
theme_override_fonts/font = ExtResource("7_l6by4")
text = "Eu ajudo as pessoas a serem felizes
e resolverem seus problemas."
label_settings = SubResource("LabelSettings_c7vj4")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
visible = false
offset_left = 332.0
offset_top = 299.0
offset_right = 950.0
offset_bottom = 416.0
theme_override_fonts/font = ExtResource("7_l6by4")
text = "Hoje tenho muito trabalho  a fazer.
Vocês podem me ajudar?"
label_settings = SubResource("LabelSettings_c7vj4")
horizontal_alignment = 1
